# cse121

lab1/lab1_3/: CMakeLists.txt  sdkconfig  sdkconfig.defaults.esp32c3
lab2/lab2_1/: gdbinit  output.txt
lab2/lab2_1/main/: hello_world_main.c
lab2/lab2_2/: CMakeLists.txt  sdkconfig.old
lab2/lab2_2/main/: main.c
lab3/lab3_2/: CMakeLists.txt
lab3/lab3_2/main/: CMakeLists.txt  DFRobot_LCD.cpp  main.cpp
lab3/lab3_3/: CMakeLists.txt
lab3/lab3_3/main/: DFRobot_LCD.h  main.cpp
lab4/lab4_1/: CMakeLists.txt
lab4/lab4_1/main/: CMakeLists.txt  main.c
lab4/lab4_2/: sdkconfig.old
lab4/lab4_2/main/: CMakeLists.txt  ble_hidd_demo_main.c
lab4/lab4_3/: sdkconfig.old
lab4/lab4_3/main/: ble_hidd_demo_main.c
lab5/lab5_1/: send  send.c
lab5/lab5_2/: CMakeLists.txt
lab5/lab5_2/main/: main.c
lab5/lab5_3/: CMakeLists.txt
lab5/lab5_3/main/: CMakeLists.txt  main.c
lab6/lab6_1/: CMakeLists.txt
lab6/lab6_1/main/: CMakeLists.txt  main.c
lab8/hello_world/: Cargo.toml
lab8/hello_world/src/: main.rs
